--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>FoodMunch</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="libraries/jquery.mobile-1.4.5.min.js"></script>
-	<link rel="stylesheet" href="libraries/jquery.mobile-1.4.5.min.css" />  
-</head>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="libraries/jquery.mobile-1.4.5.min.css">
+	<script src="libraries/jquery-1.11.3.min.js"></script>
+	<script src="libraries/jquery.mobile-1.4.5.min.js"></script>
+</head>
 <body>
-	
+
+<div data-role="page">
+	<div data-role="header">
+		<h1>Page Title</h1>
+	</div><!-- /header -->
+	<div role="main" class="ui-content">
+		<p>Page content goes here.</p>
+	</div><!-- /content -->
+
+	<div data-role="footer">
+		<h4>Page Footer</h4>
+	</div><!-- /footer -->
+</div><!-- /page -->
+
 </body>
 </html>
