--- a/index.html
+++ b/index.html
@@ -1,27 +1,173 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>FoodMunch</title>
-
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="libraries/jquery.mobile-1.4.5.min.css">
-	<script src="libraries/jquery-1.11.3.min.js"></script>
-	<script src="libraries/jquery.mobile-1.4.5.min.js"></script>
-</head>
-<body>
-
-<div data-role="page">
-	<div data-role="header">
-		<h1>Page Title</h1>
-	</div><!-- /header -->
-	<div role="main" class="ui-content">
-		<p>Page content goes here.</p>
-	</div><!-- /content -->
-
-	<div data-role="footer">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
-</div><!-- /page -->
-
-</body>
+  <head>
+    <title>FoodMunch</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="libraries/jquery.mobile-1.4.5.min.css" />
+    <script src="libraries/jquery-1.11.3.min.js"></script>
+    <script src="libraries/jquery.mobile-1.4.5.min.js"></script>
+  </head>
+  <style>
+    .space {
+      border: none!important;
+    }
+    .pen {
+      height: 150px;
+      border-radius: 1.3rem!important;
+    }
+    .font {
+      font-size: 0.8rem!important;
+      position: relative!important;
+      top: -18px!important;
+    }
+    .rechange {
+      padding: 1.8px 0.4rem!important;
+    }
+    .border-color {
+      background-color: rgba(0,0,0,0)!important;  
+    }
+    .right {
+      position: relative!important;
+      left: -10px;
+    }
+    .left {
+      position: relative!important;
+      right:-96px ;
+    }
+    .border-change {
+      width: 138px!important;
+      height: 130px!important;
+    }
+    .scrolling-wrapper{
+      overflow-x: auto;
+    }
+    .horizontal-post {
+      position: relative!important;
+      left:44px ;
+    }
+    .logo-image {
+      width: 94;
+      height: 62;
+    }
+    .man-image {
+      width: 38;
+      height: 38;
+    }
+  </style>
+  <body>   
+    <div class="p-1">
+      <div class="ui-grid-a">
+        <div class="ui-block-a">
+          <div class="ui-bar ui-bar space border-color right" >
+            <img src="assets/icons/icon3.png" alt="Girl in a jacket" class="logo-image">
+          </div>
+        </div>
+        <div class="ui-block-b">
+          <div class="ui-bar ui-bar space border-color left" >
+            <img src="assets/icons/icon1.png" alt="Girl in a jacket" class="man-image" >
+          </div>
+        </div> 
+      </div>
+      <form>
+        <input data-type="search" id="searchFilterReveal">
+      </form>
+      <ul data-role="listview" data-filter="true" data-input="#searchFilterReveal" data-filter-reveal="true" data-filter-placeholder="Search fruits..." data-inset="true">
+          <li><a href="#">Apple</a></li>
+          <li><a href="#">Banana</a></li>
+          <li><a href="#">Cherry</a></li>
+          <li><a href="#">Cranberry</a></li>
+          <li><a href="#">Grape</a></li>
+          <li><a href="#">Orange</a></li>
+      </ul>
+      <div class="ui-grid-a">
+        <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right" style="height:34px">All Categories</div></div>
+        <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
+      </div>
+      <div role="main">
+        <div class="container-fluid">
+          <div class="scrolling-wrapper row flex-row flex-nowrap mt-4 pb-4 pt-2">
+            <div class="col-5">
+              <div class="card border-change pen " >
+                <img class="card-img-top pen " src="assets/foods/food2.jpeg" alt="Card image cap">
+                <p class="card-text horizontal-post"><b>Parata</b></p>
+              </div>
+            </div>
+            <div class="col-5">
+              <div class="card border-change pen" >
+                <img class="card-img-top pen" src="assets/foods/food3.jpeg" alt="Card image cap">
+                <p class="card-text horizontal-post"><b>Pizza</b></p>
+              </div>
+            </div>
+            <div class="col-5">
+              <div class="card border-change pen" >
+                <img class="card-img-top pen" src="assets/foods/food4.jpeg" alt="Card image cap">
+                <p class="card-text horizontal-post"><b>Noodles</b></p>
+              </div>
+            </div>
+            <div class="col-5">
+              <div class="card border-change pen" >
+                <img class="card-img-top pen" src="assets/foods/food5.jpeg" alt="Card image cap">
+                <p class="card-text horizontal-post"><b>Parata</b></p>
+              </div>
+            </div>       
+          </div>
+        </div>
+      </div>
+      <div class="ui-grid-a">
+        <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right" style="height:34px">Resturants</div></div>
+        <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
+      </div> 
+      <div class="card rounded space">
+        <img class="card-img-top pen" src="assets/resturant1.jpeg" alt="Card image cap">
+        <div class="card-body rechange">
+          <p class="card-text"><b>Rose Garden Restaurant</b></p>
+          <p class="card-text font">Burger - Chiken - Riche - Wings</p>
+        </div>
+      </div>
+      <div class="card rounded space" >
+        <img class="card-img-top pen" src="assets/resturant2.jpeg" alt="Card image cap">
+        <div class="card-body rechange">
+          <p class="card-text"><b>Chicken Hut</b></p>
+          <p class="card-text font"> Chiken Eat with Curry</p>
+        </div>
+      </div>
+      <div class="card rounded space" >
+        <img class="card-img-top pen" src="assets/resturant3.jpg" alt="Card image cap">
+        <div class="card-body rechange">
+          <p class="card-text"><b>Chicken Hut</b></p>
+          <p class="card-text font"> Chiken Eat with Curry</p>
+        </div>
+      </div>
+      <div class="card rounded space" >
+        <img class="card-img-top pen" src="assets/resturant4.jpg" alt="Card image cap">
+        <div class="card-body rechange">
+          <p class="card-text"><b>Chicken Hut</b></p>
+          <p class="card-text font"> Chiken Eat with Curry</p>
+        </div>
+      </div>
+    </div>
+    <div data-role="footer" data-position="fixed">
+      <div data-role="header">
+        <div data-role="navbar" >
+          <ul>
+            <li><a href="#" class="ui-btn-active">主页</a></li>
+            <li><a href="#">第二页</a></li>
+            <li><a href="#">搜索</a></li>
+            <li><a href="#">搜索</a></li>
+          </ul>
+        </div>
+      </div> 
+    </div>
+  </body>
 </html>
+
+
+
+
+
+
+
