--- a/home.html
+++ b/home.html
@@ -64,6 +64,12 @@
       width: 25!important;
       height: 25!important;
     }
+    @media screen and (orientation:landscape) {
+      .left {
+      position: relative!important;
+      right:-328px ;
+      }
+    }
   </style>
   <body>   
     <div class="p-1">
