Added review section to the project

--- a/php/login.html
+++ b/php/login.html
@@ -16,7 +16,7 @@
         <div>
             <img class="logo" src="../../assets/logo.png">
         </div>
-        <form action="/php/login.php" method=post>
+        <form action="../php/login.php" method=post>
             <div data-role="fieldcontain">
                 <input type="text" id="name" placeholder="name" required>
             </div>
