--- a/sign-in.html
+++ b/sign-in.html
@@ -89,7 +89,7 @@
           <label for="password">Password:</label>
           <input type="password" name="password" id="password" value="" autocomplete="off">
           <button type="button" class="btn btn-lg button-login">SIGN UP</button>
-          <p class="card-text ready">Need an account ? <a class="link">SIGN IN</a></p>
+          <p class="card-text ready">Need an account ? <a class="link" href="sign-up.html">SIGN IN</a></p>
           <p class="card-text or">or</p>
           <div class="row">
             <div class="col">
@@ -99,8 +99,7 @@
               <img src="assets/icons/icon4.png" alt="Girl in a jacket" class="icon-wl">
             </div>
           </div>
-        </div>
-        
+        </div>       
       </div>
   </body>
 </html>
