--- a/sign-up.html
+++ b/sign-up.html
@@ -97,7 +97,7 @@
             </div>
           </div>
           <button type="button" class="btn btn-lg button-login">SIGN UP</button>
-          <p class="card-text ready">Already a Member ? <a class="link">LOG IN</a></p>
+          <p class="card-text ready">Already a Member ? <a class="link" href="sign-in.html">LOG IN</a></p>
         </div>
         
       </div>
