--- a/cart.html
+++ b/cart.html
@@ -81,7 +81,7 @@
     .button-back {
         position: relative!important;
         top: 10px!important;
-        right: 12px;
+        right: -4px!important;
     }
     .cart-description {
         position: relative!important;
@@ -96,8 +96,8 @@
           <div class="ui-block-a">
               <label for="text-basic">
                 <div class="ui-alt-icon">
-                      <a href="home.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
-                   <div class="cart-description">Cart</div>
+                  <a href="home.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
+                  <div class="cart-description">Cart</div>
                 </div>
               </label>
           </div>
