--- a/payment/cart-payment.html
+++ b/payment/cart-payment.html
@@ -7,11 +7,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="libraries/jquery.mobile-1.4.5.min.css" />
-    <script src="libraries/jquery-1.11.3.min.js"></script>
-    <script src="libraries/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="libraries/themes/foodMunchTheme.min.css" />
-    <link rel="stylesheet" href="libraries/themes/jquery.mobile.icons.min.css" />
+    <link rel="stylesheet" href="../libraries/jquery.mobile-1.4.5.min.css" />
+    <script src="../libraries/jquery-1.11.3.min.js"></script>
+    <script src="../libraries/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="../libraries/themes/foodMunchTheme.min.css" />
+    <link rel="stylesheet" href="../libraries/themes/jquery.mobile.icons.min.css" />
   </head>
   <style>
     .magic {
@@ -176,14 +176,14 @@
         <div class="cart-wrapper">
           <div class="card space item_one">
               <div class="row">
-                  <div class="col-4"><img class="card-img-top cart-image " src="assets/foods/food3.jpeg" alt="Card image cap"></div>
+                  <div class="col-4"><img class="card-img-top cart-image " src="../assets/foods/food3.jpeg" alt="Card image cap"></div>
                   <div class="col-6"> <p class="card-text cart-font">Oven Fresh Chicken Pizza</p></div>
                   <div class="col-6"> <p class="card-text cart-price"><b>RS 1500</b></p></div>
               </div>
           </div>
           <div class="card space item_two">
               <div class="row">
-                  <div class="col-4"><img class="card-img-top cart-image " src="assets/foods/food4.jpeg" alt="Card image cap"></div>
+                  <div class="col-4"><img class="card-img-top cart-image " src="../assets/foods/food4.jpeg" alt="Card image cap"></div>
                   <div class="col-6"> <p class="card-text cart-font">Baked Spaghetti</p></div>
                   <div class="col-6"> <p class="card-text cart-price"><b>RS 700</b></p></div>
               </div>
@@ -193,19 +193,38 @@
 
 
 
+    <div class="" id="cart" >
+  
+      <div class="">
+        <table class="show-cart table">
+          
+        </table>
+        <div>Total price: $<span class="total-cart"></span></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Order now</button>
+      </div>
+
+  </div> 
+
+
+
+
+
     <div  data-role="footer" data-position="fixed" class="card-footer">
       <div class="position-fixed card-route" data-position="fixed">
         <div class="card magic" >
           <div class="card-body">
             <label class="total">TOTAL &nbsp; <b> Rs 2200</b>  </label>    
-            <button type="button" class="btn btn-lg button-login" onclick="location.href='payment/payment.html'">PLACE ORDER</button>
+            <button type="button" class="btn btn-lg button-login" onclick="location.href='../payment/payment.html'">PLACE ORDER</button>
           </div> 
         </div>  
     </div>
   </body>
 </html>
 
-
+<script src="../payment/cart.js"></script>
 
 
 
