--- a/payment/productView.html
+++ b/payment/productView.html
@@ -7,12 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="libraries/jquery.mobile-1.4.5.min.css" />
-    <script src="libraries/jquery-1.11.3.min.js"></script>
-    <script src="libraries/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="libraries/themes/foodMunchTheme.min.css" />
-    <link rel="stylesheet" href="libraries/themes/jquery.mobile.icons.min.css" />
-    <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" href="../libraries/jquery.mobile-1.4.5.min.css" />
+    <script src="../libraries/jquery-1.11.3.min.js"></script>
+    <script src="../libraries/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="../libraries/themes/foodMunchTheme.min.css" />
+    <link rel="stylesheet" href="../libraries/themes/jquery.mobile.icons.min.css" />
+    <link rel="stylesheet" href="../styles/common.css" />
+    <script src="https://kit.fontawesome.com/2458e99c54.js" crossorigin="anonymous"></script>
   </head>
   <style>
     .space {
@@ -100,12 +101,12 @@
       <div class="ui-grid-a">
         <div class="ui-block-a">
           <div class="ui-bar ui-bar space border-color right" >
-            <img src="assets/icons/icon3.png" alt="Girl in a jacket" class="logo-image">
+            <img src="../assets/icons/icon3.png" alt="Girl in a jacket" class="logo-image">
           </div>
         </div>
         <div class="ui-block-b">
           <div class="ui-bar ui-bar space border-color left" >
-            <img src="assets/icons/icon1.png" alt="Girl in a jacket" class="man-image" />
+            <img src="../assets/icons/icon1.png" alt="Girl in a jacket" class="man-image" />
           </div>
         </div> 
       </div>
@@ -123,43 +124,55 @@
       <div class="ui-grid-a">
         <div class="ui-block-a"><div class="ui-bar ui-bar space border-color right" style="height:34px">All Categories</div></div>
         <div class="ui-block-b"><div class="ui-bar ui-bar space border-color left" style="height:34px">See All </div></div>
+        <a type="button" class="btn btn-primary" onclick="location.href='cart-payment.html'">Cart (<span class="total-count"></span>)</a><button class="clear-cart btn btn-danger">Clear Cart</button></div>
       </div>
       <div role="main">
         <div class="container-fluid">
           <div class="scrolling-wrapper row flex-row flex-nowrap mt-4 pb-4 pt-2">
             <div class="horizontal-width">
               <div class="card border-change pen " >
-                <img class="card-img-top pen " src="assets/foods/food2.jpeg" alt="Card image cap">
-                <p class="card-text horizontal-post"><b>Parata</b></p>
+                <img class="card-img-top pen " src="../assets/foods/food2.jpeg" alt="Card image cap">
+                <a  href="#" class="add-to-cart btn btn-primary" data-name="Banana" data-price="1.22"><b>Parata</b></a>
               </div>
             </div>
+
+
+            <i class="fa" style="font-size:24px">&#xf07a;</i>
+    <span class='badge badge-warning' id='lblCartCount'> 8 </span>
+
+            
+          
+
+
+
+
             <div class="horizontal-width">
               <div class="card border-change pen" >
-                <img class="card-img-top pen" src="assets/foods/food3.jpeg" alt="Card image cap">
+                <img class="card-img-top pen" src="../assets/foods/food3.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Pizza</b></p>
               </div>
             </div>
             <div class="horizontal-width">
               <div class="card border-change pen" >
-                <img class="card-img-top pen" src="assets/foods/food4.jpeg" alt="Card image cap">
+                <img class="card-img-top pen" src="../assets/foods/food4.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Noodles</b></p>
               </div>
             </div>
             <div class="horizontal-width">
               <div class="card border-change pen" >
-                <img class="card-img-top pen" src="assets/foods/food5.jpeg" alt="Card image cap">
+                <img class="card-img-top pen" src="../assets/foods/food5.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Parata</b></p>
               </div>
             </div> 
             <div class="horizontal-width">
               <div class="card border-change pen" >
-                <img class="card-img-top pen" src="assets/foods/food5.jpeg" alt="Card image cap">
+                <img class="card-img-top pen" src="../assets/foods/food5.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Parata</b></p>
               </div>
             </div>  
             <div class="horizontal-width">
               <div class="card border-change pen" >
-                <img class="card-img-top pen" src="assets/foods/food5.jpeg" alt="Card image cap">
+                <img class="card-img-top pen" src="../assets/foods/food5.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Parata</b></p>
               </div>
             </div>        
@@ -173,28 +186,28 @@
       </div> 
       <div class="wrapper">
         <div class="card space grid_one">
-          <img class="card-img-top pen horizontal-pen " src="assets/resturant1.jpeg" alt="Card image cap">
+          <img class="card-img-top pen horizontal-pen " src="../assets/resturant1.jpeg" alt="Card image cap">
           <div class="card-body rechange">
             <p class="card-text"><b>Rose Garden Restaurant</b></p>
             <p class="card-text font">Burger - Chiken - Riche - Wings</p>
           </div>
         </div>
         <div class="card space grid_two" >
-          <img class="card-img-top pen horizontal-pen " src="assets/resturant2.jpeg" alt="Card image cap">
+          <img class="card-img-top pen horizontal-pen " src="../assets/resturant2.jpeg" alt="Card image cap">
           <div class="card-body rechange">
             <p class="card-text"><b>Chicken Hut</b></p>
             <p class="card-text font"> Chiken Eat with Curry</p>
           </div>
         </div>
         <div class="card space grid_three" >
-          <img class="card-img-top pen horizontal-pen " src="assets/resturant3.jpg" alt="Card image cap">
+          <img class="card-img-top pen horizontal-pen " src="../assets/resturant3.jpg" alt="Card image cap">
           <div class="card-body rechange">
             <p class="card-text"><b>Chicken Hut</b></p>
             <p class="card-text font"> Chiken Eat with Curry</p>
           </div>
         </div>
         <div class="card space grid_four" >
-          <img class="card-img-top pen horizontal-pen " src="assets/resturant4.jpg" alt="Card image cap">
+          <img class="card-img-top pen horizontal-pen " src="../assets/resturant4.jpg" alt="Card image cap">
           <div class="card-body rechange">
             <p class="card-text"><b>Chicken Hut</b></p>
             <p class="card-text font"> Chiken Eat with Curry</p>
@@ -206,10 +219,10 @@
       <div data-role="header">
         <div data-role="navbar" >
           <ul>
-            <li><a href="" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
-            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="" class="ui-btn-active border" target="_self" data-transition="slide"><img src="../assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="../assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
           </ul>
         </div>
       </div> 
@@ -217,7 +230,7 @@
   </body>
 </html>
 
-
+<script src="../payment/cart.js"></script>
 
 
 
