--- a/payment/productView.html
+++ b/payment/productView.html
@@ -150,6 +150,7 @@
               <div class="card border-change pen" >
                 <img class="card-img-top pen" src="../assets/foods/food3.jpeg" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Pizza</b></p>
+                <a  href="#" class="add-to-cart btn btn-primary" data-name="Pizza" data-price="1.22"><b>Parata</b></a>
               </div>
             </div>
             <div class="horizontal-width">
@@ -229,7 +230,6 @@
     </div>
   </body>
 </html>
-
 <script src="../payment/cart.js"></script>
 
 
