--- a/review/review.html
+++ b/review/review.html
@@ -34,6 +34,7 @@
         right: -4px;
         width: 45px;
         height: 45px;
+        border-radius: 30px!important;
     }
     .card-list {
         position: relative!important;
