--- a/review/review.html
+++ b/review/review.html
@@ -168,6 +168,11 @@
         .comment-info {
             font-size: 1em;
         }
+        .card-list {
+        position: relative!important;
+        top: 0px!important;
+        right: 36px;
+    }
     }
   </style>
   <body>
