--- a/restaurantView.html
+++ b/restaurantView.html
@@ -19,14 +19,14 @@
       border: none!important;
     }
     .pen {
-      height: 200px;
+      height: 400px;
 	    padding: 10px;
 	    border-radius: 10px;
       border-radius: 1.3rem!important;
 	    display: grid;
     }
     .font {
-      font-size: 0.8rem!important;
+      font-size: 1.5rem!important;
       position: relative!important;
       top: -18px!important;
       padding-left: 10px;
@@ -73,6 +73,7 @@
     }
     .title{ 
       padding: 10px;
+      font-size: 2rem!important;
     }
     .column {
       width: 33%;
@@ -84,8 +85,8 @@
       clear: both;
     }
     .content {
-      height: 100px;
-      width: 110px;
+      height: 180px;
+      width: 230px;
 	    padding: 10px;
 	    border-radius: 10px;
       border-radius: 1.3rem!important;
@@ -99,33 +100,37 @@
       height : auto;
     }
     .backIcon {
-      height: 30px;
+      height: 50px;
       border-radius: 20px;
+      margin-left: 20px;
     }
     .categories {
       padding: 5px;
+      font-size: 1.5rem!important;
+      height: 60px;
+    }
+    .heading {
+      font-size: 1.8rem!important;
+      position: relative!important;
+      padding-top: 10px;
     }
   </style>
   <body>   
     <div class="p-1">
       <div class="ui-grid-b">
-        <div class="ui-block-a" style="width:50px">
-          <div class="ui-bar space border-color right" >
-            <div inputmode="button">
-              <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
-            </div>
+        <div class="ui-block-a">
+          <div class="ui-bar space border-color right">
+              <img src="assets/icons/icon10.png" style="margin-top: 10px;" alt="Back" class="backIcon" />
           </div>
         </div>
         <div class="ui-block-b"> 
-          <div class="ui-bar space border-color right" >
-            <div>
-              <p class="card-text"><b>Restaurant View</b></p>
-            </div>
+          <div class="ui-bar space border-color" style="width: 300px; margin-top: 10px;" >
+              <p class="card-text heading"><b>Restaurant View</b></p>
           </div>
         </div>
-        <div class="ui-block-b">
-          <div class="ui-bar space border-color left" >
-            <img src="assets/icons/icon2.png" alt="Cart" style="height: 38px; width: 35px" class="man-image" />
+        <div class="ui-block-c">
+          <div class="ui-bar space border-color left">
+            <img src="assets/icons/icon2.png" alt="Cart" style="height: 50px; margin-top: 10px;" class="man-image" />
           </div>
         </div>  
       </div>
@@ -138,31 +143,31 @@
             Vegetables can range between fresh, earthy, and zesty.
             Sauces are sweet, sour, bitter, tangy, rich, or fruity.</p>
             
-          <div class="ui-grid-b">
-            <div class="ui-block-a">
-              <button class="card-text categories" style="background-color:#FF7622; color: white; border-radius: 20px;">Pasta</button>
+          <div class="ui-grid-c">
+            <div class="ui-block-a" style="padding: 10px;">
+              <button class="card-text categories" style="background-color:#FF7622; color: white; border-radius: 25px;">Pasta</button>
             </div>
-            <div class="ui-block-b">
-              <button class="card-text categories" style="background-color:white; border-radius: 20px;">Noodles</button>
+            <div class="ui-block-b"  style="padding: 10px;">
+              <button class="card-text categories" style="background-color:white; border-radius: 25px;">Noodles</button>
             </div>
-            <div class="ui-block-c">
-              <button class="card-text categories" style="background-color:white; border-radius: 20px;">Pizza</button>
+            <div class="ui-block-c"  style="padding: 10px;">
+              <button class="card-text categories" style="background-color:white; border-radius: 25px;">Pizza</button>
             </div>
           </div>
 
       </div>
       <div class="ui-grid-b">
-        <p class="card-text" style="padding: 10px;"><b>Pasta (6)</b></p>
-        <div class="ui-block-a">
-          <img class="card-img-top content" src="assets/poi/images (2).jpg" alt="Card image cap">
-          <p class="card-text font text">Spicy Pasta<br>Rs 500</p>
+        <p class="card-text font" style="padding-top: 40px;"><b>Pasta (6)</b></p>
+        <div class="ui-block-a"> 
+          <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
+          <p class="card-text font text">Gartlic Angel Hair Pasta<br>Rs 500</p>
         </div>
         <div class="ui-block-b">
-          <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
+          <img class="card-img-top content" src="assets/poi/images (2).jpg" alt="Card image cap">
           <p class="card-text font text">Cream Pasta<br>Rs 800</p>
         </div>
         <div class="ui-block-c">
-          <img class="card-img-top content" src="assets/poi/images (2).jpg"Card image cap">
+          <img class="card-img-top content" src="assets/poi/images (1).jpg" alt="Card image cap">
           <p class="card-text font text">Macaroni<br>Rs 850</p>
         </div>
       </div>
