--- a/payment/cart-payment.html
+++ b/payment/cart-payment.html
@@ -136,7 +136,7 @@
           <div class="ui-block-a">
               <label for="text-basic">
                 <div class="ui-alt-icon">
-                  <a href="home.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
+                  <a href="productDetails.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
                   <div class="cart-description">Cart</div>
                 </div>
               </label>
