--- a/home.html
+++ b/home.html
@@ -105,7 +105,7 @@
         </div>
         <div class="ui-block-b">
           <div class="ui-bar ui-bar space border-color left" >
-            <img src="assets/icons/icon1.png" alt="Girl in a jacket" class="man-image" />
+            <img src="assets/icons/icon1.png"  onclick="location.href='favourite/favourite-list.html'" alt="Girl in a jacket" class="man-image" />
           </div>
         </div> 
       </div>
@@ -135,7 +135,7 @@
             </div>
             <div class="horizontal-width">
               <div class="card border-change pen" >
-                <img class="card-img-top pen" src="assets/foods/food3.jpeg" alt="Card image cap">
+                <img class="card-img-top pen" src="assets/foods/food3.jpeg" onclick="location.href='payment/productDetails.html'" alt="Card image cap">
                 <p class="card-text horizontal-post"><b>Pizza</b></p>
               </div>
             </div>
