--- a/payment/productDetails.html
+++ b/payment/productDetails.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>FoodMunch</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -13,8 +13,19 @@
     <link rel="stylesheet" href="../libraries/themes/foodMunchTheme.min.css" />
     <link rel="stylesheet" href="../libraries/themes/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="../styles/common.css" />
-    <script src="https://kit.fontawesome.com/2458e99c54.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2458e99c54.js" crossorigin="anonymous"></script>   
   </head>
+  <script type="text/javascript">
+    var cartItems = JSON.parse(localStorage.getItem('cartItemsList'));
+    console.log("lets start using html 5 storage");
+    var product1 = {
+        'productId': "1",
+        'productImage': "../assets/foods/food3.jpeg",
+        'productName': "Chicken-Pizza",
+        'productCost': "Rs 1500",
+        'productRatings': "4.5"
+    };
+</script>
   <style>
     .magic {
       position: relative!important;
@@ -245,12 +256,19 @@
           <div class="ui-block-a">
               <label for="text-basic">
                 <div class="ui-alt-icon">
-                  <a href="home.html" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Cart</a>
-                  <div class="cart-description">Cart</div>
+                  <a onclick="location.href='../home.html'" target="_self" class="ui-btn ui-shadow ui-corner-all ui-icon-carat-l ui-btn-icon-notext ui-btn-inline button-back">Product Details</a>
+                  <div class="cart-description">Product Details</div>
                 </div>
               </label>
           </div>
-          <div class="ui-block-b"><div class="ui-bar ui-bar edit-one">EDIT ITEMS</div></div>
+          <div class="ui-block-b">
+            <div class="favHeart">
+              <a href="#" id="restaurant01" target="_self">
+                  <img id="fav" style="margin-top: 18px; margin-right: 36px" src="../assets/favourite/heartoutlineicon.png" width="26" height="26" align="right" />
+                  <img id="fav1" style="margin-top: 18px; margin-right: 36px" src="../assets/favourite/heartfillicon.png" width="26" height="26" align="right" />
+              </a>
+          </div>
+          </div>
         </div>
         <br>
         <br>
@@ -265,7 +283,7 @@
         </div>
         <div class="ui-grid-c" > 
             <div class="ui-block-a">
-                <img src="../assets/icons/icon12.png" alt="Cart" class="man-image" />
+                <img src="../assets/icons/icon12.png" alt="Cart" class="man-image" onclick="location.href='../review/review.html'"/>
             </div>
             <div class="ui-block-b">
                 <img src="../assets/icons/icon13.jpg" alt="Cart"  class="man-image" />
@@ -306,6 +324,7 @@
   </body>
 </html>
 <script src="../payment/cart.js"></script>
+<script src="../favourite/favButton.js"></script>
 
 
 
