--- a/productDetails.html
+++ b/productDetails.html
@@ -150,7 +150,7 @@
           
           <div class="ui-grid-c" style="margin-left: 450px;"> 
             <div class="ui-block-a">
-              <img src="assets/icons/icon12.png" alt="Cart" style="padding-right: 50px; height: 38px;" class="man-image" />
+              <img src="assets/icons/icon12.png" alt="Cart" style="padding-right: 50px; height: 38px;" class="man-image" /><p class="card-text font" style="padding-top: 10px; padding-left: 30px;"><b>4.7</b></p>
             </div>
             <div class="ui-block-b">
               <img src="assets/icons/icon13.jpg" alt="Cart" style="padding-left: 30px; height: 45px;" class="man-image" />
@@ -183,14 +183,14 @@
               <button class="card-text categories" style="background-color:white; border-radius: 40px; width: 60px; height: 60px; margin: 5px;">L</button>
             </div>
           </div>
-          </div>
 
-          <div class="ui-grid-d">
+          <div class="ui-grid-b">
             <div class="ui-block-a"></div>
             <div class="ui-block-b video">
-              <video width="500" controls>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/4ZMlXqX0zOY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <!-- <video width="450" controls>
                 <source src="assets/video/Garlic angel hair pasta.mp4" type="video/mp4">
-              </video>            
+              </video>             -->
             </div>
           </div>
         </div>
@@ -198,27 +198,31 @@
 
       <div class="container">
         <div class="ui-grid-c">
-          <div class="ui-block-a">
-          </div>
-          <div class="ui-block-b" style="padding-top: 45px;">
-            <p class="card-text font"><b>Rs. 500</b></p>
+          <div class="ui-block-a" style="padding-top: 45px;">
+            <p class="card-text font"><b> PRICE Rs. 500</b></p>
           </div>
           <div class="ui-block-b">
-            <div class="ui-grid-b ">
-              <div class="ui-block-a" style="padding: 10px;">
-                <button class="card-text categories" style="background-color: rgb(0, 0, 0); color: white; border-radius: 40px; width: 50px; height: 50px;">-</button>
+          </div>
+          <div class="ui-block-c"></div>
+          <div class="ui-block-d">
+              <div class="ui-block-a"></div>
+              <div class="ui-block-b" style="padding-top: 40px;">
+                <p class="card-text font" style="color: #FF7622">CLEAR CART</p>
               </div>
-              <div class="ui-block-b" style="padding: 10px;">
-                <button class="card-text categories" style="background-color: rgb(0, 0, 0); color: white; border-radius: 40px; width: 50px; height:50px;">+</button>
-              </div>
-            </div>
           </div>
         </div>
 
         <div class="ui-grid-b">
           <div class="ui-block-a"></div>
           <div class="ui-block-b">
-            <button class="card-text font" style="background-color: #FF7622; color: white;">Add to Cart</button>
+            <button class="card-text" style="background-color: #FF7622; color: white; width: 300px;"><p class="card-text categories">Add to Cart</p></button>
+          </div>
+        </div>
+
+        <div class="ui-grid-b">
+          <div class="ui-block-a"></div>
+          <div class="ui-block-b">
+            <button class="card-text" style="background-color: green; color: white; width: 300px;"><p class="card-text categories">View Cart & Order</p></button>
           </div>
         </div>
       </div>
