--- a/favourite/favourite-list.html
+++ b/favourite/favourite-list.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="../libraries/themes/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="../styles/common.css" />
     <script src="https://kit.fontawesome.com/2458e99c54.js" crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="../favourite/sendList.js"></script>
     <style>
         /* Header Styles */
         .ui-header {
@@ -146,11 +148,11 @@
             </div>
         </div>
         </div>
-        <!-- <div data-rol="fieldcontain" id="btnSendEmail" class="ui-nodisc-icon">
+        <div data-rol="fieldcontain" id="btnSendEmail" class="ui-nodisc-icon">
             <form method="post">
                 <input type="button" data-icon="email" data-iconpos="left" value="Send Email" onclick="sendEmail()">
             </form>
-        </div> -->
+        </div>
         </div>
     </div>
 </div>
@@ -168,7 +170,6 @@
   </div>
 </body>
 </html>
-
 <script type="text/javascript">
     var favouritesList = JSON.parse(localStorage.getItem('favouriteList'));
 
