--- a/favourite/favourite-list.html
+++ b/favourite/favourite-list.html
@@ -130,7 +130,7 @@
                 </div>
               </label>
           </div>
-          <div class="ui-block-b"><div class="ui-bar ui-bar edit-one">SHARE FAVOURITES</div></div>
+          <div class="ui-block-b"><div class="ui-bar ui-bar edit-one" onclick="location.href='share-favourite.html'">SHARE FAVOURITES</div></div>
         </div>
         <div  class="ui-content" id="res01" >
         <div class="card space item_one">
@@ -147,11 +147,6 @@
                 </a>
             </div>
         </div>
-        </div>
-        <div data-rol="fieldcontain" id="btnSendEmail" class="ui-nodisc-icon">
-            <form method="post">
-                <input type="button" data-icon="email" data-iconpos="left" value="Send Email" onclick="sendEmail()">
-            </form>
         </div>
         </div>
     </div>
