Order history/anchor tags

--- a/productDetails.html
+++ b/productDetails.html
@@ -125,11 +125,9 @@
   <body>   
     <div class="p-1">
       <div class="ui-grid-b">
-        <div class="ui-block-a">
+        <div class="ui-block-a" onclick="history.back()">
           <div class="ui-bar space border-color right" >
-            <div inputmode="button">
-              <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
-            </div>
+            <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
           </div>
         </div>
         <div class="ui-block-b"> 
