--- a/restaurantView.html
+++ b/restaurantView.html
@@ -119,9 +119,11 @@
     <div class="p-1">
       <div class="ui-grid-b">
         <div class="ui-block-a">
-          <div class="ui-bar space border-color right">
+          <a href="home.html" target="_self">
+            <div class="ui-bar space border-color right">
               <img src="assets/icons/icon10.png" style="margin-top: 10px;" alt="Back" class="backIcon" />
-          </div>
+            </div>
+          </a>
         </div>
         <div class="ui-block-b"> 
           <div class="ui-bar space border-color" style="width: 300px; margin-top: 10px;" >
@@ -159,7 +161,9 @@
       <div class="ui-grid-b">
         <p class="card-text font" style="padding-top: 40px;"><b>Pasta (6)</b></p>
         <div class="ui-block-a"> 
-          <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
+          <a href="productDetails.html" target="_self">
+            <img class="card-img-top content" src="assets/poi/images.jpg" alt="Card image cap">
+          </a>
           <p class="card-text font text">Gartlic Angel Hair Pasta<br>Rs 500</p>
         </div>
         <div class="ui-block-b">
@@ -192,7 +196,7 @@
       <div data-role="header">
         <div data-role="navbar" >
           <ul>
-            <li><a href="#" class="ui-btn-active border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
+            <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/home.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/account.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="cart.html" class="border" target="_self" data-transition="slide"><img src="assets/navBar/cart.png" alt="Girl in a jacket" class="bar"></a></li>
             <li><a href="#" class="border" target="_self" data-transition="slide"><img src="assets/navBar/qr.png" alt="Girl in a jacket" class="bar"></a></li>
