--- a/trackOrderPage.html
+++ b/trackOrderPage.html
@@ -151,11 +151,11 @@
     <div class="p-1">
       <div class="ui-grid-b">
         <div class="ui-block-a">
-          <div class="ui-bar space border-color right" >
-            <div inputmode="button">
+          <a href="orderHistory.html" target="_self">
+            <div class="ui-bar space border-color right" >
               <img src="assets/icons/icon10.png" alt="Back" class="backIcon" />
             </div>
-          </div>
+          </a>
         </div>
         <div class="ui-block-b"> 
           <div class="ui-bar space border-color right">
@@ -191,8 +191,7 @@
             <div class="ui-bar space border-color right" >
               <p class="card-text heading"><b>Rose Garden Restaurant</b></p>
               <p class="card-text font">Ordered At 06 Sept, 10.00 pm<br>
-              2x Burger<br>
-              4x Sandwitch</p>
+              <p class="card-text font">Tandoori Chicken Pizza (L)<br>
             </div>
           </div>  
         </div>
